Add bold to unordered lists to differentiate

--- a/src/content/basics/intro/platform.mdx
+++ b/src/content/basics/intro/platform.mdx
@@ -78,7 +78,7 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 These features are core to GraphOS:
 
-- [Cloud routing](/graphos/cloud-routing/)
+- Cloud routing
   - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of your individual services (also called subgraphs). This enables the router to automatically collect operation metrics that you can then visualize in GraphOS Studio.
 - The schema registry
   - GraphOS tracks the schemas for all your GraphQL APIs, and it also handles composing those schemas into one supergraph schema for your router.
