--- a/src/content/graphos/basics/api-keys.mdx
+++ b/src/content/graphos/basics/api-keys.mdx
@@ -9,7 +9,7 @@ Any system that isn't running as part of your local development setup should alw
 
 ## Graph API keys
 
-A graph API key provides access to interacting with a _single graph_ in GraphOS.
+A graph API key provides access to interacting with a single graph in GraphOS.
 
 Create a unique graph API key for each non-development system that communicates with GraphOS. Doing so enables you to revoke access to a single system without affecting others.
 
