--- a/src/content/graphos/basics/graphs/studio-features.mdx
+++ b/src/content/graphos/basics/graphs/studio-features.mdx
@@ -6,9 +6,8 @@ This article describes GraphOS Studio features for all [graph types](./#graph-ty
 
 ## Creating graphs
 
-To create a cloud supergraph, see the [GraphOS quickstart](../quickstart/cloud/).
-
-To create a non-cloud graph (that is, a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
+- To create a cloud supergraph, see the [GraphOS quickstart](../quickstart/cloud/).
+- To create a non-cloud graph (that is, a self-hosted supergraph or a monograph), see [this section](./#creating-graphs).
 
 ## Viewing graph details
 
@@ -22,7 +21,7 @@ Enterprise accounts can set [member roles](../org/members/#organization-wide-mem
 
 ### The README page
 
-When a user opens one of your graph's variants in GraphOS Studio, its **README page** is shown:
+When a user opens one of your graph's variants in GraphOS Studio, its **README** page is shown:
 
 <img className="screenshot" alt="GraphQL codeblock in README" src="../../img/readme-example.jpg" width="500" />
 
@@ -329,14 +328,18 @@ By default, graphs are visible to all members of your organization. If you have 
 
 You can configure visibility and grant your organization's members explicit access to your graph from the Permissions tab of your graph's Settings page.
 
-Note that **Org Admins** can always see all graphs in your organization.
+<Note>
+
+**Org Admins** can always see all graphs in your organization.
+
+</Note>
 
 ## Dangerous actions
 
 ### Transferring graph ownership
 
 You can transfer a graph to a different GraphOS organization you belong to
-by visiting the graph's Settings page in Studio and changing the **graph owner**.
+by visiting the graph's Settings page in Studio and changing the graph owner.
 
 ### Deleting a graph
 
