--- a/src/content/graphos/basics/quickstart/self-hosted.mdx
+++ b/src/content/graphos/basics/quickstart/self-hosted.mdx
@@ -45,8 +45,8 @@ We'll cover these concepts in more detail as we proceed through the steps below.
 
 This quickstart uses the following Apollo tools:
 
-- GraphOS Studio: This is the primary web interface for GraphOS. Studio helps you monitor, manage, and collaborate on your supergraph.
-- The Rover CLI: This is the primary command-line interface for GraphOS. Rover helps you interact with your graphs and their schemas.
+- **GraphOS Studio**: This is the primary web interface for GraphOS. Studio helps you monitor, manage, and collaborate on your supergraph.
+- **The Rover CLI**: This is the primary command-line interface for GraphOS. Rover helps you interact with your graphs and their schemas.
 
 Let's set these up first.
 
