--- a/src/content/graphos/delivery/index.mdx
+++ b/src/content/graphos/delivery/index.mdx
@@ -6,8 +6,8 @@ description: Efficiently develop and deploy changes to your GraphQL schema with 
 
 GraphOS provides schema pipeline tools to develop and deploy changes to your graph schemas. These tools fall into two main categories:
 
-- _Schema governance_ tools let you manage, validate, and enforce standards in your schemas.
-- _Schema delivery_ tools let you integrate schema publication into your DevOps workflows.
+- **Schema governance** tools let you manage, validate, and enforce standards in your schemas.
+- **Schema delivery** tools let you integrate schema publication into your DevOps workflows.
 
 ## Schema governance
 
