--- a/src/content/graphos/explorer/connecting-authenticating.mdx
+++ b/src/content/graphos/explorer/connecting-authenticating.mdx
@@ -41,7 +41,7 @@ The Explorer provides features to help you authenticate via [request headers](#r
 
 <Tip>
 
-If your graph has authentication requirements that aren't covered by these options, please contact [support@apollographql.com](mailto:support@apollographql.com) with questions or feedback.
+If your graph has authentication requirements that aren't covered by these options, please contact support@apollographql.com with questions or feedback.
 
 </Tip>
 
