--- a/src/content/graphos/explorer/sandbox.mdx
+++ b/src/content/graphos/explorer/sandbox.mdx
@@ -3,7 +3,7 @@ title: Apollo Sandbox
 description: Use Studio tools without an Apollo account
 ---
 
-Apollo Sandbox is a special mode of GraphOS Studio that helps with local development. Sandbox loads a running GraphQL server's schema via introspection, instead of fetching published schemas from the Apollo registry.
+_Apollo Sandbox_ is a special mode of GraphOS Studio that helps with local development. Sandbox loads a running GraphQL server's schema via introspection, instead of fetching published schemas from the Apollo registry.
 
 Sandbox provides access to the following GraphOS Studio features:
 
