--- a/src/content/graphos/metrics/sending-operation-metrics.mdx
+++ b/src/content/graphos/metrics/sending-operation-metrics.mdx
@@ -59,7 +59,7 @@ Apollo Server defines its agent for performing these tasks in [the usage reporti
 
 <Note>
 
-If you're interested in collaborating with Apollo on creating a dedicated integration for your GraphQL server, please contact us at [support@apollographql.com](mailto:support@apollographql.com).
+If you're interested in collaborating with Apollo on creating a dedicated integration for your GraphQL server, please contact us at support@apollographql.com.
 
 </Note>
 
@@ -71,7 +71,7 @@ The GraphOS reporting endpoint accepts batches of traces and metrics that are en
 
 <Note>
 
-We strongly encourage developers to contact Apollo support at [support@apollographql.com](mailto:support@apollographql.com) to discuss their use case before building their own reporting agent using this module.
+We strongly encourage developers to contact Apollo support at support@apollographql.com to discuss their use case before building their own reporting agent using this module.
 
 </Note>
 
