--- a/src/content/graphos/org/audit-log.mdx
+++ b/src/content/graphos/org/audit-log.mdx
@@ -40,7 +40,7 @@ When creating an audit log export, you specify a **time range**, along with opti
 
 <Note>
 
-If you need to export a log with more complex filters and against archives, please email [support@apollographql.com](mailto:support@apollographql.com).
+If you need to export a log with more complex filters and against archives, please email support@apollographql.com.
 
 </Note>
 
@@ -93,7 +93,7 @@ The **Action** column of an audit log indicates the type of each action that was
 
 <Note>
 
-If your audit log includes an action type that is not listed below and you have questions about it, please contact [support@apollographql.com](mailto:support@apollographql.com).
+If your audit log includes an action type that is not listed below and you have questions about it, please contact support@apollographql.com.
 
 </Note>
 
