--- a/src/content/graphos/basics/index.mdx
+++ b/src/content/graphos/basics/index.mdx
@@ -49,9 +49,9 @@ The GraphOS platform provides an ever-growing collection of tools and services t
 
 These features (along with many others) are available to organizations on Apollo [Serverless and Dedicated plans](https://www.apollographql.com/pricing/):
 
-- [Cloud routing](./cloud-routing/)
+- Cloud routing
   - GraphOS automatically provisions and hosts a router for each of your supergraphs. Clients query your router instead of individual subgraphs, enabling the router to automatically collect operation metrics that you can then [visualize in GraphOS Studio](./metrics/).
-- The schema registry.
+- The schema registry
   - GraphOS tracks the GraphQL schemas for all your individual subgraphs, and it also handles composing those subgraph schemas into one supergraph schema for your router.
 - Safe schema delivery
   - The [schema checks](./delivery/schema-checks/) feature of GraphOS enables you to verify whether proposed changes to a subgraph will cause an issue with other subgraphs, or with any of your existing clients.
