Remove TXT verification from custom domains

--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -25,7 +25,7 @@ Custom domains support CNAME records which are assigned at the variant level.
 Setup includes two steps:
 
 1. Setting up a new CNAME record in your DNS provider.
-2. Verifying your CNAME with Apollo.
+2. Open a support ticke with Apollo support
 
 <Note>
 
@@ -43,7 +43,7 @@ To get started with custom domains, create a [CNAME record](https://www.cloudfla
   src="../../img/cloud-dedicated/router-endpoint.png"
 />
 
-### Verify CNAME
+### Open a support ticket
 
 Next, open a support ticket requesting Apollo to enable your new CNAME.
 You can open a ticket by clicking the **?** icon in the top right of [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) and selecting **Contact Support**.
@@ -54,9 +54,10 @@ You can open a ticket by clicking the **?** icon in the top right of [GraphOS St
   src="../../img/cloud-dedicated/support-ticket.png"
 />
 
-Apollo will reply with a new TXT record you need to add to your DNS to verify your CNAME.
-Once you've created your TXT record, let Apollo know.
-Upon verification, your new CNAME will be live.
+Your request may take up to 2 business days to process. Once Apollo has processed your custom domain request, your new CNAME will be live.
+
+### Zero downtime migrations
+Custom domains supports zero downtime migrations where you want to move `api.mycompany.com` from a different host to GraphOS Cloud. To do this, create a support ticket first and we'll guide you through the process of getting ready for a zero downtime migration using an existing CNAME.
 
 ## Limitations
 
