--- a/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
+++ b/src/content/graphos/cloud-routing/dedicated/custom-domains.mdx
@@ -6,30 +6,25 @@ description: Use a custom domain for your cloud router endpoint to minimize clie
 
 <DedicatedPreview />
 
-The _custom domains_ feature lets you replace the default `apollographos.net` router endpoint URL with your own subdomain, for example, `api.apollographql.com`.
+To interact with your supergraph, clients send requests to your router's endpoint. The _custom domains_ feature lets you replace the default `apollographos.net` router endpoint URL with your own subdomain.
 
 Custom domains can help to:
 
 - Minimize client-side changes
 - Use your existing CORS policies and security controls
 - Protect your cloud routers from DDoS attacks
+- Provide TLS termination to your cloud routers
 
 ## How custom domains work
 
-Custom domains use CNAME records, which are assigned at the variant level, to use a custom domain in place of the default `apollographos.net` [router endpoint URL](./quickstart#router-endpoint-url).
-Custom domains run on [Cloudflare's](https://www.cloudflare.com/) global network.
-Using a custom domain provides DDoS protections and TLS termination to your cloud routers.
-
-### Zero downtime migrations
-
-Custom domains support zero downtime migrations when you want you want to move `api.mycompany.com` from a different host to GraphOS Cloud.
+Custom domains use [CNAME records](https://www.cloudflare.com/learning/dns/dns-records/dns-cname-record/) to point requests made to your subdomain to your `apollographos.net` router endpoint URL. Custom domains run on [Cloudflare's](https://www.cloudflare.com/) global network.
 
 ## Custom domains setup
 
 Setup includes two steps:
 
-1. Setting up a new CNAME record in your DNS provider.
-2. Opening a ticket with Apollo support to enable your new CNAME.
+1. Setting up a CNAME record in your DNS provider.
+2. Opening a ticket with Apollo support to enable your CNAME.
 
 <Note>
 
@@ -39,13 +34,25 @@ Custom domains will be available through self-service in GraphOS Studio later in
 
 ### Setup a CNAME
 
-To get started with custom domains, create a [CNAME record](https://www.cloudflare.com/learning/dns/dns-records/dns-cname-record/) in your DNS provider that points to your Dedicated variant's [existing subdomain](./quickstart#router-endpoint-url). You can find your Dedicated variant's subdomain in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) on the **Cloud Router** page under **API Endpoint**.
+Create a CNAME record in your DNS provider that points to your Dedicated variant's [existing subdomain](./quickstart#router-endpoint-url). For example, create a CNAME for `api.mydomain.com` that points to `current--docs-example.apollographos.net`.
+
+You can find your Dedicated variant's subdomain in [GraphOS Studio](https://studio.apollographql.com?referrer=docs-content) on the **Cloud Router** page under **API Endpoint**.
 
 <img
   className="screenshot"
   alt="A cloud router's endpoint displayed on the Cloud Router page in GraphOS Studio"
   src="../../img/cloud-dedicated/router-endpoint.png"
 />
+
+<Note>
+
+CNAME records are assigned at the variant level, so you must set up a separate CNAME record for each graph variant that requires a custom domain.
+
+</Note>
+
+### Using an existing CNAME
+
+If you already have a CNAME record for the custom domain you want to use, [contact Apollo Support](#open-a-support-ticket) before making any changes. We'll guide you through remapping from a different host to the GraphOS Cloud subdomain.
 
 ### Open a support ticket
 
